# shuttle-sns-ex

./: Cargo.toml  README.md
receive-sns/: Cargo.toml
receive-sns/src/: main.rs
sns-sender/: Cargo.toml
sns-sender/src/: errors.rs  main.rs
