[package]
name = "shuttle-sns-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
aws-config = { version = "1.1.8", features = ["behavior-version-latest"] }
aws-credential-types = { version = "1.1.8", features = ["hardcoded-credentials"] }
aws-sdk-sns = "1.18.0"
axum = "0.7.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
shuttle-axum = "0.41.0"
shuttle-runtime = "0.41.0"
shuttle-secrets = "0.41.0"
shuttle-shared-db = { version = "0.41.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.58"
tokio = "1.28.2"
